# compilerProject

./: .gitignore  .gitignore.orig  A11_Aohana039_Villanueva813_012.docx  A12.bat  A31_Aohana039_Villanueva813_012.doc  A31_F23_Amber_Template.doc  CMakeLists.txt  CST8152_Compilers_F23-A21_Aohana039_Villanueva813-Amber_Model_.doc  Compilers.c  Compilers.h  INPUT6_Big-A12-a-100-10.err  MainReader.c  Reader.c  Reader.h  ~$1_Aohana039_Villanueva813_012.doc  ~$1_Aohana039_Villanueva813_012.docx  ~$T8152_Compilers_F23-A21_Aohana039_Villanueva813-Amber_Model_.doc  ~WRL2171.tmp
Amber_v2/: A12.bat  CMakeLists.txt  Compilers.h  INPUT1_Hello.amb  INPUT2_Volume.amb  INPUT3_Factorial.amb  INPUT4_Datatypes.amb  INPUT5_General-A12.out  INPUT5_General.amb  INPUT6_Big.amb  Reader.c
Amber_v2/a1files/code/: Compilers.c  Reader.h
Assignment_2/: Assign2Test.html  Coffee.html  FoodItem.html  Fruit.html  Inventory.html  Preserve.html  Vegetable.html  allclasses-index.html  allpackages-index.html  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-summary.html  package-tree.html  package-use.html  type-search-index.js
Assignment_2/class-use/: Assign2Test.html  Coffee.html  FoodItem.html  Fruit.html  Inventory.html  Preserve.html  Vegetable.html
Assignment_2/doc/: Assign2Test.html  Coffee.html  FoodItem.html  Fruit.html  Inventory.html  Preserve.html  Vegetable.html  allclasses-index.html  allpackages-index.html  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-summary.html  package-tree.html  package-use.html
Assignment_2/doc/class-use/: Assign2Test.html  Coffee.html  FoodItem.html  Fruit.html  Inventory.html  Preserve.html  Vegetable.html
Assignment_2/doc/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
Assignment_2/index-files/: index-1.html  index-10.html  index-11.html  index-12.html  index-13.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
Assignment_2/src/: Assign2Test.java  Coffee.java  FoodItem.java  Fruit.java  Inventory.java  Preserve.java  Vegetable.java
a1files/code/: MainReader.c  Reader.c
a22_v1/: A22.bat  CMakeLists.txt  Compilers.c  Compilers.h  INPUT0_Empty-A22.out  INPUT0_Empty.amb  INPUT1_Hello-A22.out  INPUT1_Hello.amb  INPUT2_Volume-A22.out  INPUT2_Volume.amb  INPUT3_Factorial-A22.out  INPUT3_Factorial.amb  INPUT4_Datatypes-A22.out  INPUT4_Datatypes.amb  INPUT5_General-A22.out  INPUT5_General.amb  MainParser.c  MainReader.c  MainScanner.c  Parser.c  Parser.h  README.amb  Reader.h  Scanner.c  Scanner.h
