#************************************************************
#* COMPILERS COURSE - Algonquin College
#* Code version: Fall, 2023
#* Author: Philogene Villanueva, Tasfia Khan Aohana
#* Professors: Paulo Sousa
#************************************************************
#=--------------------------------------------------------=
#||          COMPILERS - ALGONQUIN COLLEGE (F23)         ||
#|=------------------------------------------------------=|
#||                                                      ||
#||                   		_-_.                         ||
#||	         			 _-',^. `-_.                     ||
#||	        		 ._-' ,'   `.   `-_                  ||
#||	        		!`-_._________`-':::                 ||
#||	        		!   /\        /\::::                 ||
#||	        		;  /  \      /..\:::                 ||
#||	        		! /    \    /....\::                 ||
#||	        		!/      \  /......\:                 ||
#||		        	;--.___. \/_.__.--;;                 ||
#||	        		 '-_    `:!;;;;;;;'                  ||
#||			        	`-_, :!;;;''                     ||
#||	        			   `-!'                          ||
#||                                                      ||
#||     _____    __    __     _____     _____  __ __     ||
#||    /\___/\  /_/\  /\_\  /\  __/\  /\_____\/_/\__/\   ||
#||   / / _ \ \ ) ) \/ ( (  ) )(_ ) )( (_____/) ) ) ) )  ||
#||   \ \(_)/ //_/ \  / \_\/ / __/ /  \ \__\ /_/ /_/_/   ||
#||  / / _ \ \\ \ \\// / /\ \  _\ \  / /__/_\ \ \ \ \    ||
#||  ( (_( )_) ))_) )( (_(  ) )(__) )( (_____\)_) ) \ \  ||
#||   \/_/ \_\/ \_\/  \/_/  \/____\/  \/_____/\_\/ \_\/  ||
#||                                                      ||
#| =----------------------------------------------------= |
#=-------------------------------------------------------=

cmake_minimum_required (VERSION 3.8)

project ("Amber")

# Add source to this project's executable: check name and dependences
add_executable (Amber
	"Compilers.h"	"Compilers.c"
	"Reader.h"		"Reader.c"		"MainReader.c"
	"Scanner.h"		"Scanner.c"		"MainScanner.c"
	"Parser.h"		"Parser.c"		"MainParser.c"
)

# TO_DO: Add tests and install targets if needed.
